complete the storage package